--- a/css/link-tag-style.css
+++ b/css/link-tag-style.css
@@ -9,6 +9,7 @@
   background: rgba(0, 0, 0, 0.85);
   top: 40px;
   left: -8px;
+  display: none;
 }
 .instance-tooltip:before {
   content: "";
@@ -23,28 +24,32 @@
 }
 .instance-tooltip .style-holder {
   position: relative;
+  clear: both;
 }
 .instance-tooltip .style-holder ul {
   padding: 0 10px 0 30px;
   list-style: none;
   margin: 0;
   line-height: 30px;
+  width: 50%;
+  float: left;
 }
 .instance-tooltip .style-holder ul li {
   font-size: 12px;
   color: #fff;
   clear: both;
   overflow: hidden;
-}
-.instance-tooltip .style-holder ul li .style-text,
-.instance-tooltip .style-holder ul li .style-icon-count {
   float: left;
-  width: 50%;
-  text-align: left;
+  position: relative;
 }
-.instance-tooltip .style-holder ul li .style-icon-count {
+.instance-tooltip .style-holder .style-icon-count {
+  width: 50%;
+  float: right;
   text-align: right;
   color: #aaaaaa;
+  line-height: 30px;
+  font-size: 11px;
+  padding-right: 15px;
 }
 .instance-tooltip .style-holder .prev {
   position: absolute;
@@ -89,6 +94,7 @@
   left: 0;
 }
 .instance-tooltip .instance-tooltip-con {
+  width: 100%;
   height: 200px;
   overflow-y: auto;
 }
