--- a/css/tag-assets.css
+++ b/css/tag-assets.css
@@ -12,6 +12,17 @@
   padding-left: 45px;
   position: relative;
 }
+#tagAssets #tagAssetsCon .assets-parent > li {
+  float: left;
+}
+#tagAssets #tagAssetsCon .assets-parent > li .editinplace {
+  position: relative;
+  top: 7px;
+}
+#tagAssets #tagAssetsCon .assets-parent > li .forTags {
+  position: relative;
+  top: 7px;
+}
 #tagAssets #tagAssetsCon .assets-parent .checkbox {
   display: inline-block;
   position: absolute;
@@ -27,6 +38,23 @@
   opacity: 0;
   width: 0;
   height: 0;
+}
+#tagAssets #tagAssetsCon .assets-parent .checkbox > input[type="checkbox"]:checked ~ label {
+  border-color: #202020;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+#tagAssets #tagAssetsCon .assets-parent .checkbox > input[type="checkbox"]:checked ~ label:before {
+  content: "";
+  width: 4px;
+  height: 8px;
+  border-bottom: 2px solid #202020;
+  border-right: 2px solid #202020;
+  position: absolute;
+  top: 3px;
+  left: 6px;
+  z-index: 1;
+  transform: rotate(40deg);
 }
 #tagAssets #tagAssetsCon .assets-parent .checkbox > label {
   width: 16px;
@@ -66,6 +94,39 @@
   background: #fff;
   padding: 0;
   min-height: auto;
+  position: relative;
+  visibility: hidden;
+  opacity: 0;
+}
+#tagAssets #tagAssetsCon .tag-assets-con .file-item-con .file-item .checkbox > input[type="checkbox"] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+#tagAssets #tagAssetsCon .tag-assets-con .file-item-con .file-item .checkbox > input[type="checkbox"]:checked ~ label {
+  border-color: #202020;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+#tagAssets #tagAssetsCon .tag-assets-con .file-item-con .file-item .checkbox > input[type="checkbox"]:checked ~ label:before {
+  content: "";
+  width: 4px;
+  height: 8px;
+  border-bottom: 2px solid #202020;
+  border-right: 2px solid #202020;
+  position: absolute;
+  top: 3px;
+  left: 5px;
+  z-index: 1;
+  transform: rotate(40deg);
+}
+#tagAssets #tagAssetsCon .tag-assets-con .file-item-con .file-item:hover .checkbox > label {
+  visibility: visible;
+  opacity: 1;
 }
 #tagAssets #tagAssetsCon .tag-assets-con .file-item-con .file-item .indicator-count {
   width: 16px;
