--- a/scss/link-tag-style.scss
+++ b/scss/link-tag-style.scss
@@ -10,6 +10,7 @@
     background: rgba(0,0,0,0.85);
     top: 40px;
     left: -8px;
+    display: none;
     &:before{
         content: "";
         width: 0;
@@ -23,28 +24,32 @@
     }
     .style-holder{
         position: relative;
+        clear: both;
         ul{
             padding: 0 10px 0 30px;
             list-style: none;
             margin: 0;
             line-height: 30px;
+            width: 50%;
+            float: left;
             li{
                 font-size: 12px;
                 color: #fff;
                 clear: both;
                 overflow: hidden;
-                .style-text,
-                .style-icon-count{
-                    float: left;
-                    width: 50%;
-                    text-align: left;
-                }
-                .style-icon-count{
-                    text-align: right;
-                    color: #aaaaaa;
-                }
+                float: left;
+                position: relative;
             }
         }
+        .style-icon-count{
+            width: 50%;
+            float: right;
+            text-align: right;
+            color: #aaaaaa;
+            line-height: 30px;
+            font-size: 11px;
+            padding-right: 15px;
+        }        
         .prev{
             position: absolute;
             top: -15px;
@@ -90,6 +95,7 @@
         
     }
     .instance-tooltip-con{
+        width: 100%;
         height: 200px;
         overflow-y: auto;
         .instance-pane{
