--- a/scss/link-tag-style.scss
+++ b/scss/link-tag-style.scss
@@ -10,7 +10,7 @@
     background: rgba(0,0,0,0.85);
     top: 40px;
     left: -8px;
-    display: none;
+    /*display: none;*/
     &:before{
         content: "";
         width: 0;
