--- a/css/link-tag-style.css
+++ b/css/link-tag-style.css
@@ -9,7 +9,7 @@
   background: rgba(0, 0, 0, 0.85);
   top: 40px;
   left: -8px;
-  display: none;
+  /*display: none;*/
 }
 .instance-tooltip:before {
   content: "";
